--- a/main.css
+++ b/main.css
@@ -1,7 +1,13 @@
 body {
   padding-top: 50px;
+  text-align: center;
 }
 .starter-template {
   padding: 40px 15px;
   text-align: center;
+}
+
+.starter-template img {
+	height:165px;
+	display: inline;
 }
