--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
- // @import"compass/reset";
+ @import"compass/reset";
  body {
     padding-top: 50px;
     text-align: center;
@@ -23,3 +23,10 @@ div#summary {
     -o-background-size: cover;
     background-size: cover;
 }
+
+#main {
+	margin:0;
+	padding:0;
+	width: 100%;
+}
+
