--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
- @import"compass/reset";
+ // @import"compass/reset";
  body {
     padding-top: 50px;
     text-align: center;
@@ -15,18 +15,24 @@
     height:165px;
     display: inline;
 }
-
 div#summary {
+    min-height: 370px;
     background: url(../images/gravitar.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
-
 #main {
-	margin:0;
-	padding:0;
-	width: 100%;
+    margin:0;
+    padding:0;
+    width: 100%;
 }
-
+div#blurb {
+    width: 45%;
+    float: right;
+    opacity: 0.7;
+    background-color: white;
+    position: relative;
+    top: 50px;
+}
