--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -43,12 +43,14 @@ div#blurb {
 }
 .section-content {
     margin:10px;
+    padding: 20px;
     min-height:400px;
+
 }
 .skill-description {
     // float: left;
 }
-.skills-bars {
+.section-details {
     margin:5px;
     clear: both;
 }
@@ -60,7 +62,28 @@ li {
     margin:15px;
     width: 80%;
 }
-
 .progress-bar {
     background-color: #5cb85c;
+}
+.thumbnail > img {
+    max-width: 100%;
+}
+#find-me-pizza {
+    background-image: url('https://dmdf3fr77elxm.cloudfront.net/portfolio_assets/14920/pictures/1397633656/original.png?1397633656')
+}
+#the-movie-db {
+    background-image: url('https://dmdf3fr77elxm.cloudfront.net/portfolio_assets/14921/pictures/1397633735/original.png?1397633735')
+}
+
+#parks-quiz-app {
+    background-image: url('https://dmdf3fr77elxm.cloudfront.net/portfolio_assets/14919/pictures/1397633611/original.png?1397633611')
+}
+.caption {
+    transition: all .5s ease;
+    opacity: 0;
+}
+.caption:hover {
+    color:white;
+    background: rgba(#627272, 0.85);
+    opacity: 1.0;   
 }
