--- a/css/screen.css
+++ b/css/screen.css
@@ -21,13 +21,13 @@ body {
 }
 
 /* line 18, ../sass/screen.scss */
-div#summary {
-  min-height: 370px;
+#summary > div.section-content {
   background: url(../images/gravitar.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  height: 800px;
 }
 
 /* line 26, ../sass/screen.scss */
@@ -35,9 +35,10 @@ div#summary {
   margin: 0;
   padding: 0;
   width: 100%;
+  height: 100%;
 }
 
-/* line 31, ../sass/screen.scss */
+/* line 32, ../sass/screen.scss */
 div#blurb {
   width: 45%;
   float: right;
@@ -48,69 +49,70 @@ div#blurb {
   margin: 1%;
 }
 
-/* line 40, ../sass/screen.scss */
+/* line 41, ../sass/screen.scss */
 .section-title {
-  float: left;
+  position: relative;
+  top: 15px;
+  padding: 10px;
   margin: 10px;
 }
 
-/* line 44, ../sass/screen.scss */
+/* line 47, ../sass/screen.scss */
 .section-content {
-  margin: 10px;
   padding: 20px;
-  min-height: 400px;
+  height: 100%;
 }
 
-/* line 53, ../sass/screen.scss */
+/* line 55, ../sass/screen.scss */
 .section-details {
   margin: 5px;
   clear: both;
 }
 
-/* line 57, ../sass/screen.scss */
+/* line 59, ../sass/screen.scss */
 li {
   list-style: none;
 }
 
-/* line 60, ../sass/screen.scss */
+/* line 62, ../sass/screen.scss */
 .progress {
   height: 20px;
   margin: 15px;
   width: 80%;
 }
 
-/* line 65, ../sass/screen.scss */
+/* line 67, ../sass/screen.scss */
 .progress-bar {
   background-color: #5cb85c;
 }
 
-/* line 68, ../sass/screen.scss */
+/* line 70, ../sass/screen.scss */
 .thumbnail > img {
   max-width: 100%;
 }
 
-/* line 71, ../sass/screen.scss */
+/* line 73, ../sass/screen.scss */
 #find-me-pizza {
   background-image: url("https://dmdf3fr77elxm.cloudfront.net/portfolio_assets/14920/pictures/1397633656/original.png?1397633656");
 }
 
-/* line 74, ../sass/screen.scss */
+/* line 76, ../sass/screen.scss */
 #the-movie-db {
   background-image: url("https://dmdf3fr77elxm.cloudfront.net/portfolio_assets/14921/pictures/1397633735/original.png?1397633735");
 }
 
-/* line 78, ../sass/screen.scss */
+/* line 80, ../sass/screen.scss */
 #parks-quiz-app {
   background-image: url("https://dmdf3fr77elxm.cloudfront.net/portfolio_assets/14919/pictures/1397633611/original.png?1397633611");
 }
 
-/* line 81, ../sass/screen.scss */
+/* line 83, ../sass/screen.scss */
 .caption {
   transition: all .5s ease;
   opacity: 0;
 }
 
-/* line 85, ../sass/screen.scss */
+/* line 87, ../sass/screen.scss */
 .caption:hover {
   color: white;
   background: rgba(98, 114, 114, 0.85);
