--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -15,18 +15,19 @@
     height:165px;
     display: inline;
 }
-div#summary {
-    min-height: 370px;
+#summary>div.section-content {
     background: url(../images/gravitar.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
+    height: 800px;
 }
 #main {
     margin:0;
     padding:0;
     width: 100%;
+    height: 100%;
 }
 div#blurb {
     width: 45%;
@@ -38,13 +39,14 @@ div#blurb {
     margin: 1%;
 }
 .section-title {
-    float: left;
+    position: relative;
+    top: 15px;
+    padding: 10px;
     margin:10px;
 }
 .section-content {
-    margin:10px;
     padding: 20px;
-    min-height:400px;
+    height:100%;
 
 }
 .skill-description {
