Update parks and rec img

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -78,7 +78,7 @@ li {
 }
 
 #parks-quiz-app {
-    background-image: url('https://dmdf3fr77elxm.cloudfront.net/portfolio_assets/14919/pictures/1397633611/original.png?1397633611')
+    background-image: url('https://lh3.googleusercontent.com/d/1ZXv7GNIVsr_aSdhn2KSOEQq5liIA6JbD=s220?authuser=0')
 }
 .caption {
     transition: all .5s ease;
